@startuml
    interface Renderable
    abstract class Entity
    abstract class AnimatedEntity
    abstract class Character
    abstract class Enemy
    abstract class AI
    abstract class AIEnemy
    abstract class Item
    abstract class Tile
    abstract class LevelLoader
    class GameBoard
    class Bomb
    class Flame
    class FlameSegment
    class AILow
    class AIHigh
    class AIMedium
    class Balloon
    class Doll
    class Ghost
    class Kondoria
    class Minvo
    class Oneal
    class Bomber
    class Brick
    class DestroyableTile
    class BombItem
    class FlameItem
    class SpeedItem
    class Grass
    class Portal
    class Wall
    class LayeredEntity
    class Message

    Renderable <.. Entity
    Renderable <.. GameBoard

    Entity <-- AnimatedEntity
    Entity <-- LayeredEntity
    Entity <-- Message
    Entity <-- Tile
    Entity <-- Flame

    AnimatedEntity <-- Bomb
    AnimatedEntity <-- FlameSegment
    AnimatedEntity <-- Character

    Character <-- Bomber
    Character <-- Enemy

    Enemy <-- Balloon
    Enemy <-- Oneal
    Enemy <-- Doll
    Enemy <-- Minvo
    Enemy <-- Ghost
    Enemy <-- Kondoria

    Tile <-- Item
    Tile <-- DestroyableTile
    Tile <-- Wall
    Tile <-- Grass
    Tile <-- Portal

    Item <-- BombItem
    Item <-- FlameItem
    Item <-- SpeedItem

    DestroyableTile <-- Brick

    AI <-- AIBomber
    AI <-- AIEnemy

    AIEnemy <-- AILow
    AIEnemy <-- AIMedium
    AIEnemy <-- AIHigh

    LevelLoader <-- FileLevelLoader

    class BombermanException
    class LoadLevelException

    BombermanException <-- LoadLevelException
@enduml